--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
   "type": "project",
   "require": {
     "jenssegers/blade": "1.4.0",
-    "phpmailer/phpmailer": "6.6.5"
+    "phpmailer/phpmailer": "6.6.5",
+    "vlucas/phpdotenv": "5.5.x-dev"
   },
   "license": "MIT",
   "autoload": {
