--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
+# APPLICATION
+APP_ENV=development # [development, staging, production]
+APP_STATUS=running # [running, maintain]
+
 # DATABASE
 DB_HOST=127.0.0.1
 DB_PORT=3306
