--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,13 @@ DB_PORT=3306
 DB_USERNAME=root
 DB_PASSWORD=
 DB_NAME=php
+
+# MAILER
+MAIL_DEBUG=0 # [0 => OFF, 1 => DEBUG_CLIENT, 2 => DEBUG_SERVER]
+MAIL_HOST=smtp.example.com
+MAIL_SMTP_USERNAME=user@example.com
+MAIL_SMTP_PASSWORD=secret
+MAIL_SMTP_SERCURE=ssl # [ssl, tls]
+MAIL_PORT=465
+MAIL_FROM=from@example.com
+MAIL_ALIAS_NAME=user
